fixed footer email overflow, fixed margin in card & address overflow, fixed house profile contact margin, and cleaned some code

--- a/FrontEnd/src/assets/scss/utils/_mixins.scss
+++ b/FrontEnd/src/assets/scss/utils/_mixins.scss
@@ -57,11 +57,11 @@
     font-size: $sm-font-size;
   } @else if $type == 'link' {
     font-weight: $regular-font-weight;
-    font-size: $xxs-font-size;
+    font-size: $sm-font-size;
     text-decoration-line: underline;
   } @else if $type == 'caption' {
     font-weight: $regular-font-weight;
-    font-size: $xxs-font-size;
+    font-size: $sm-font-size;
   } @else {
     @error "#{$type} is not one of the available font styles. \
             Check _mixins.scss to see which font styles you can use.";
