--- a/FrontEnd/src/components/Footer/Footer.module.scss
+++ b/FrontEnd/src/components/Footer/Footer.module.scss
@@ -36,3 +36,7 @@
   display: flex;
   align-items: flex-end;
 }
+
+.email {
+  word-break: break-word;
+}
