--- a/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
+++ b/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
@@ -7,7 +7,7 @@
   box-shadow: 0 0.4rem 0.6rem 0 rgba(black, .14); //elevation 06dp
 }
 
-.container{
+.container {
   max-width: 100%;
   margin: 0;
 }
@@ -27,7 +27,7 @@
   font-weight: bold;
 }
 
-.textPortion{
+.textPortion {
   margin-left: 0.5rem;
   font-family: Montserrat;
 }
@@ -38,13 +38,13 @@
   cursor: pointer;
 }
 
-.day{
+.day {
   margin: 0.3rem 0 1.5rem 0;
   color:#AAAAAA;
   font-size: 0.8rem;
 }
 
-.price{
+.price {
   margin-bottom: 1.5rem;
   color: #A64919;
 
@@ -59,28 +59,27 @@
 }
 
 .address {
-  $line-height: 1.275rem;
-
   margin-bottom: 1.8rem;
   display: flex;
   font-size: 0.85rem;
   gap: 0.4rem;
   overflow: hidden;
-  // set the height to be 2x the line-height, resulting in only 2 lines being displayed
-  line-height: $line-height;
-  height: $line-height * 2;
-
-  div {
-    height: 100%;
-    display: flex;
-  }
+  align-items: center;
 
   .locationIcon {
     align-items: center;
   }
+
+  .addressText {
+    text-overflow: ellipsis;
+    // the below styles are necessary for text-overflow: ellipsis to work
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+  }
 }
 
-.oom{
+.oom {
   margin-bottom: 0.5rem;
   font-size: 0.9rem;
   color: #797979;
